[gd_scene load_steps=8 format=3 uid="uid://c18c4wr5vufng"]

[ext_resource type="Script" path="res://src/slot.gd" id="1_hc50x"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_plsev"]
transparency = 1
blend_mode = 1
albedo_color = Color(1, 0, 0, 0.501961)

[sub_resource type="BoxMesh" id="BoxMesh_hxc51"]
material = SubResource("StandardMaterial3D_plsev")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ynsml"]
transparency = 1
blend_mode = 1
albedo_color = Color(0, 1, 0, 0.501961)

[sub_resource type="BoxMesh" id="BoxMesh_tixla"]
material = SubResource("StandardMaterial3D_ynsml")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8txte"]
transparency = 1
blend_mode = 1
albedo_color = Color(0.823529, 0.4, 0, 0.501961)

[sub_resource type="BoxMesh" id="BoxMesh_focph"]
material = SubResource("StandardMaterial3D_8txte")

[node name="Slot" type="Node3D"]
script = ExtResource("1_hc50x")

[node name="ConstrainHighlight" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_hxc51")

[node name="ExpandHighlight" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_tixla")
skeleton = NodePath("../ConstrainHighlight")

[node name="InvalidHighlight" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_focph")
skeleton = NodePath("../ConstrainHighlight")
